[package]
name = "jgtbrs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rusqlite = { version = "0", optional = true }
serde_json = { version = "1", optional = true }
notify = { version = "4", optional = true }
parking_lot = { version = "0.12", optional = true }
tera = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }

[features]
sqlite = ["dep:rusqlite"]
templater = ["dep:serde_json", "dep:notify", "dep:parking_lot", "dep:tera", "dep:chrono"]
